Changed and installed dependences.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "url": "git+https://github.com/PengWang0316/CloudWatch.git"
   },
   "keywords": [
-    "JWT",
-    "JSON Web Token",
-    "Parser"
+    "metric",
+    "log",
+    "Cloud Watch",
+    "AWS",
+    "AWSXRay"
   ],
   "bugs": {
     "url": "https://github.com/PengWang0316/CloudWatch/issues"
@@ -35,12 +37,14 @@
     "@kevinwang0316/log": "^1.0.0"
   },
   "peerDependencies": {
+    "aws-xray-sdk": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/runtime": "^7.2.0",
+    "aws-xray-sdk": "^2.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "coveralls": "^3.0.2",
