--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^23.6.0",
+    "sinon": "^7.2.3",
     "uglify-js": "^3.4.9"
   }
 }
